<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.addfee.AddFeeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_lbl_student_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_name" />

            <EditText
                android:id="@+id/edit_student_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:textColor="@android:color/black" />

            <RelativeLayout
                android:id="@+id/rel_fees_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/txt_lbl_class_fees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/class_fees" />

                <TextView
                    android:id="@+id/txt_lbl_class_exam_fees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_lbl_class_fees"
                    android:layout_marginTop="5dp"
                    android:text="@string/class_exam_fees" />

            </RelativeLayout>

            <TextView
                android:id="@+id/txt_lbl_fee_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/fee_type" />

            <Spinner
                android:id="@+id/spinner_fee_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:prompt="@string/fee_type" />

            <TextView
                android:id="@+id/txt_lbl_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/amount" />

            <EditText
                android:id="@+id/edit_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/txt_lbl_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/fee_date" />

            <DatePicker
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/spinner_title" />

            <Button
                android:id="@+id/btn_add_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/add_fee" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>