<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.message.MessageUIActivity">

    <ProgressBar
        android:id="@+id/send_message_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_lbl_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/student_class" />

        <Spinner
            android:id="@+id/spinner_class"
            style="@style/spinner_style"
            android:layout_marginTop="10dp"
            android:prompt="@string/spinner_title" />

        <TextView
            android:id="@+id/txt_lbl_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/message" />

        <EditText
            android:id="@+id/edit_message"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"
            android:gravity="start|top" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll"
        android:layout_marginTop="10dp"
        android:text="@string/send" />

</RelativeLayout>