<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/row"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/img_profile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_account_circle_black" />

        <LinearLayout
            android:id="@+id/rel_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/img_profile"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rel_student_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_lbl__student_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/student_name"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_student_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_father_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_lbl__father_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/father_s_name"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_father_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
            android:id="@+id/rel_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_lbl__address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/address"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_lbl__mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/mobile2"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_lbl__class"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/student_class"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_student_class"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_class_teacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_lbl__class_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/class_teacher"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_class_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_lbl__date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/registration_date"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_session"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_lbl__session"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/session"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_session"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_transport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_lbl__transport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/transport"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_transport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>